345-CD/LA Fix spacing for submit buttons

--- a/static/sass/components/form.scss
+++ b/static/sass/components/form.scss
@@ -31,6 +31,7 @@
     align-items: center;
     grid-template-rows: minmax(2rem, min-content) minmax(3rem, 1fr) minmax(2rem, min-content);
     grid-row-gap: .6rem;
+    margin-top: 2rem;
   }
 
   &--logout {
